{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 16,
  "lineage": "34273472-9dd5-59f1-b5a7-3f4924ca0e13",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "webEIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-03526f9ba73372f7f",
            "domain": "vpc",
            "id": "eipalloc-0c3af7ca62b2adf51",
            "network_border_group": "us-east-2",
            "network_interface": "eni-03dd60480b4f34506",
            "private_dns": "ip-10-0-1-50.us-east-2.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-18-116-225-13.us-east-2.compute.amazonaws.com",
            "public_ip": "18.116.225.13",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_vpc.ashuvpc",
            "aws_internet_gateway.ashugw",
            "aws_network_interface.ashu-nic",
            "aws_security_group.allow_customport",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ashuos1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-077e31c4939f6a2f3",
            "arn": "arn:aws:ec2:us-east-2:061112302981:instance/i-00f071ac5564bea58",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00f071ac5564bea58",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "helloashu",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-03dd60480b4f34506"
              }
            ],
            "primary_network_interface_id": "eni-03dd60480b4f34506",
            "private_dns": "ip-10-0-1-50.us-east-2.compute.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "18.116.225.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0831649c743de0598",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-092b69283e966a7ff",
            "tags": {
              "Name": "fully-vpc-Instances"
            },
            "tags_all": {
              "Name": "fully-vpc-Instances"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03b9f827c441d0f25"
            ]
          },
          "dependencies": [
            "aws_network_interface.ashu-nic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ashugw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:061112302981:internet-gateway/igw-055faed8c3424e56d",
            "id": "igw-055faed8c3424e56d",
            "owner_id": "061112302981",
            "tags": {
              "Name": "ashugw1"
            },
            "tags_all": {
              "Name": "ashugw1"
            },
            "vpc_id": "vpc-048830d8ad8c4c1ad"
          },
          "dependencies": [
            "aws_vpc.ashuvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ashu-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-03dd60480b4f34506",
            "ipv6_address_count": 0,
            "mac_address": "02:28:b6:46:45:7a",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-03b9f827c441d0f25"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-092b69283e966a7ff"
          },
          "dependencies": [
            "aws_security_group.allow_customport",
            "aws_subnet.public",
            "aws_vpc.ashuvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ashuroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:061112302981:route-table/rtb-01e796493d63c0deb",
            "id": "rtb-01e796493d63c0deb",
            "owner_id": "061112302981",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-055faed8c3424e56d",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-055faed8c3424e56d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ashur"
            },
            "tags_all": {
              "Name": "ashur"
            },
            "vpc_id": "vpc-048830d8ad8c4c1ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ashuvpc",
            "aws_internet_gateway.ashugw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ashurouteasso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb2ca02d2574d684",
            "route_table_id": "rtb-01e796493d63c0deb",
            "subnet_id": "subnet-092b69283e966a7ff"
          },
          "dependencies": [
            "aws_internet_gateway.ashugw",
            "aws_route_table.ashuroute",
            "aws_subnet.public",
            "aws_vpc.ashuvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_customport",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:061112302981:security-group/sg-03b9f827c441d0f25",
            "description": "Allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b9f827c441d0f25",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_webtr",
            "name_prefix": "",
            "owner_id": "061112302981",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_web"
            },
            "tags_all": {
              "Name": "allow_ssh_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-048830d8ad8c4c1ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ashuvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:061112302981:subnet/subnet-092b69283e966a7ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-092b69283e966a7ff",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061112302981",
            "tags": {
              "Name": "pubsub-1"
            },
            "tags_all": {
              "Name": "pubsub-1"
            },
            "vpc_id": "vpc-048830d8ad8c4c1ad"
          },
          "dependencies": [
            "aws_vpc.ashuvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ashuvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:061112302981:vpc/vpc-048830d8ad8c4c1ad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0853d0c9873740d6f",
            "default_route_table_id": "rtb-0019097590f5caba9",
            "default_security_group_id": "sg-016b49683b82a5775",
            "dhcp_options_id": "dopt-d1c23eba",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-048830d8ad8c4c1ad",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0019097590f5caba9",
            "owner_id": "061112302981",
            "tags": {
              "Name": "tempvpc"
            },
            "tags_all": {
              "Name": "tempvpc"
            }
          }
        }
      ]
    }
  ]
}